# advanced-computer-graphics

./: .gitignore  Makefile  README  build_all.bash  gmon.out  setup_env.bash
3D-Studio/: .gitignore
applications/: CMakeLists.txt  Makefile
applications/lab1/: CMakeLists.txt  Makefile  lab1  main.cpp
applications/lab1/include/vr/: AnimationCallback.h  Application.h  Camera.h  FPSCounter.h  Geometry.h  Group.h  Light.h  Loader.h  LodNode.h  Node.h  NodeVisitor.h  RenderVisitor.h  Scene.h  State.h  Texture.h  Transform.h  UpdateCallback.h  UpdateVisitor.h
applications/lab1/include/vr/Animation/: Animation.h  CircleAnimation.h
applications/lab1/include/vr/Callbacks/: UpdateCallback.h
applications/lab1/include/vr/Nodes/: Geometry.h  Group.h  LodNode.h  Node.h  Transform.h
applications/lab1/include/vr/Scene/: Camera.h  Loader.h  Scene.h
applications/lab1/include/vr/State/: Material.h  State.h  Texture.h
applications/lab1/include/vr/Visitors/: NodeVisitor.h
applications/lab1/src/vr/: AnimationCallback.cpp  Application.cpp  Camera.cpp  Geometry.cpp  Group.cpp  Light.cpp  Loader.cpp  LodNode.cpp  Material.cpp  Node.cpp  NodeVisitor.cpp  RenderVisitor.cpp  Scene.cpp  Shader.cpp  State.cpp  Text.cpp  Texture.cpp  Transform.cpp  UpdateVisitor.cpp
applications/lab1/src/vr/Animation/: CircleAnimation.cpp
applications/lab1/src/vr/Nodes/: Geometry.cpp  Transform.cpp
applications/lab1/src/vr/Scene/: Camera.cpp  Loader.cpp
applications/lab1/src/vr/State/: Shader.cpp  State.cpp  Texture.cpp
applications/lab1/src/vr/Visitors/: RenderVisitor.cpp
scenes/: my.xml  (+3 more)
(+191 files in other folders)
